--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -777,10 +777,10 @@
     visibility: visible
   }
   
-  .collapse {
+  /* .collapse {
     visibility: collapse
   }
-  
+   */
   .fixed {
     position: fixed
   }
